# assembly_gui_rqt_plugin

./: .gitignore  CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
resource/: AssemblyGuiPlugin.ui
scripts/: assembly_gui_rqt_plugin
src/assembly_gui_rqt_plugin/: assembly_gui.py
